<resources>
    <string name="app_name">Mannat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="create_post">Create Post</string>
    <string name="members">Members</string>
    <string name="home">Home</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="signup">Signup</string>
    <string name="play">Play</string>
    <string name="message">Message</string>
    <string name="comment_here">Comment here</string>
</resources>