<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_5"
        app:cardElevation="@dimen/dp_5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/playItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videoItem">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView24"
                    app:layout_constraintEnd_toStartOf="@+id/textView20"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:srcCompat="@drawable/user_img" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="@+id/textView28"
                    app:layout_constraintTop_toBottomOf="@+id/textView28"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:srcCompat="@drawable/user_img" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView21"
                    app:layout_constraintEnd_toStartOf="@+id/textView22"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="@+id/textView20"
                    app:layout_constraintStart_toStartOf="@+id/textView20"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" />

                <Button
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dp_5"
                    android:text="@string/message"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toStartOf="@+id/textView23"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView20"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_baseline_more_vert_24"
                    app:layout_constraintBottom_toBottomOf="@+id/textView22"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView22"
                    app:layout_constraintTop_toTopOf="@+id/textView22" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="Jai Shri Ram"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="@+id/textView23"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView25"
                    app:layout_constraintEnd_toEndOf="@+id/textView24"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textView24"
                    app:layout_constraintTop_toBottomOf="@+id/textView24" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="TextView"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textView28"
                    app:layout_constraintEnd_toStartOf="@+id/textView26"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="@+id/view"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="TextView"
                    android:textAlignment="textEnd"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView25"
                    app:layout_constraintEnd_toStartOf="@+id/textView27"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView25"
                    app:layout_constraintTop_toTopOf="@+id/textView25" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView26"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView26"
                    app:layout_constraintTop_toTopOf="@+id/textView26" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_comment_24"
                    android:drawablePadding="@dimen/dp_5"
                    android:padding="@dimen/dp_5"
                    android:text="Comment"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/imageView4"
                    app:layout_constraintEnd_toStartOf="@+id/textView29"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="@+id/textView25"
                    app:layout_constraintTop_toBottomOf="@+id/textView25" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_thumb_up_24"
                    android:drawablePadding="@dimen/dp_5"
                    android:padding="@dimen/dp_5"
                    android:text="Useful"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView28"
                    app:layout_constraintEnd_toStartOf="@+id/textView30"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView28"
                    app:layout_constraintTop_toTopOf="@+id/textView28" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_share_24"
                    android:drawablePadding="@dimen/dp_5"
                    android:padding="@dimen/dp_5"
                    android:text="Share"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView29"
                    app:layout_constraintEnd_toEndOf="@+id/textView27"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView29"
                    app:layout_constraintTop_toTopOf="@+id/textView29" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/buttonborder"
                    android:hint="@string/comment_here"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="@dimen/dp_5"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_15"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintEnd_toStartOf="@+id/textView31"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_send_24"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName3"
                    app:layout_constraintEnd_toEndOf="@+id/textView30"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3"
                    app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/videoItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView17"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/user_img" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView18"
                    app:layout_constraintEnd_toStartOf="@+id/textView19"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintEnd_toEndOf="@+id/textView17"
                    app:layout_constraintStart_toStartOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <Button
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/play"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_baseline_play_arrow_24"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView17"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>